translates front page strings

--- a/app/i18n/es_MX.json
+++ b/app/i18n/es_MX.json
@@ -1,7 +1,7 @@
 {
-  DATASET: "Conjunto de datos",
-  "ORGANIZATION": "Insitución",
-  "GROUP": "Grupo",
-  "RESOURCE": "Recurso",
+  "DATASETS": "Conjuntos de datos",
+  "ORGANIZATIONS": "Instituciones",
+  "GROUPS": "Grupos",
+  "RESOURCES": "Recursos",
   "SEARCH": "Búsqueda"
 }
